# firststep-name

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: release.yml
src/: cliargs.rs  lib.rs  main.rs  server.rs  templates.rs
templates/: content.html  footer.html  head.html  header.html  hej.html  script.html  style.html
