[package]
name = "firststep-name"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
colored = "3.0.0"
clap = { version = "4.5.32", features = ["derive"] }
chrono = "0.4.40"
url = "2.5.4"
